# launcher

./: .gitignore  README.md  bun.lockb  components.json  index.html  package-lock.json  package.json  puff.yml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
.src/: main.css
.src/component/: avatar.tsx  input.tsx
.src/component/ui/: button.tsx  dropdown-menu.tsx
.src/page/error/: error.tsx
.src/util/: auth.util.ts  client.util.ts  game.util.ts  notify.util.ts  server.util.ts
src/: app.tsx  application.tsx  discord.tsx  index.css  main.css  main.tsx  palette.css  util.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord.rs  env.rs  logger.rs  main.rs  tray.rs  unrar.rs  unzip.rs  utils.rs  watcher.rs
src-tauri/src/download/: interface.rs  mod.rs  unpack.rs
src-tauri/src/download/actions/: create.rs  delete.rs  mod.rs  read.rs  update.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/game/: details.rs  mod.rs  session.rs
src-tauri/src/play/: arguments.rs  clientinfo.rs  java.rs  mod.rs  session_manager.rs  settings.rs  variables.rs
src-tauri/src/util/: mod.rs  os.rs  pathbuf.rs  paths.rs  process.rs  tauri.rs  url.rs
src-tauri/src/util/tauri/: message.rs  mod.rs  userdata.rs
src/api/: process.api.ts  sound.api.ts  tauri.api.ts
src/component/: avatar.tsx  input.tsx  link.tsx  table.tsx  themeprovider.tsx
src/component/window/: background.tsx  titlebar.tsx
src/components/: avatar.tsx  background.tsx  button.tsx  copyright.tsx  error.tsx  input.tsx  link.tsx  oauth.tsx  page.tsx  pageview.tsx  progress.tsx  safeimage.tsx  textentry.tsx  titlebar.tsx  window.tsx
src/components/controllers/: base.tsx
src/components/css/: anim.css
src/components/launcher/: content.tsx  friendlist.tsx  invites.tsx  topbar.tsx
src/components/ui/: button.tsx  dropdown-menu.tsx
src/components/updater/: loader.tsx
src/components/window/: about.tsx  delete.tsx  dialog.tsx  twofactor.tsx
src/page/: applicationpage.tsx
src/page/authentication/: page.tsx
src/page/authorization/: 2faconfirm.tsx  authorization.tsx
src/page/error/: error.tsx
src/page/launcher/: launcher.tsx  page.tsx
src/page/notfound/: page.tsx
src/page/recovery/: page.tsx
src/page/registration/: page.tsx
src/page/server/: page.tsx
src/page/updater/: updater.tsx
src/schema/: auth.schema.ts
src/service/: application.service.ts  application.service.tsx  auth.service.tsx  deeplink.service.ts  discord.service.tsx  download.service.ts  download.service.tsx  friends.service.ts  http.service.ts  http.service.tsx  notify.service.tsx  session.service.ts  session.service.tsx  tray.service.ts  tray.service.tsx  user.service.ts  user.service.tsx  view.service.tsx  websocket.service.ts
src/service/discord/: activities.ts  discord.service.ts
src/service/game/: client.service.ts  client.service.tsx  game.service.ts  game.service.tsx  server.service.ts  server.service.tsx
src/storage/: credentials.storage.ts  notification.storage.ts  refresh.storage.ts  session.storage.ts  user.storage.ts
src/ui/components/: avatar.tsx  background.tsx  badge.tsx  button.tsx  form.tsx  friends.tsx  input.tsx  label.tsx  modifications.tsx  page.tsx  server.tsx  serviceauth.tsx  (+2 more)
src/util/: auth.util.ts  classname.util.ts  client.util.ts  discord.ts  discord.util.ts  downloader.util.ts  downloads.util.ts  game.util.ts  manager.util.ts  message.util.ts  notification.util.ts  notify.util.ts  play.util.ts  server.ts  server.util.ts  settings.util.ts  tauri.util.ts  tray.util.ts  unsorted.util.ts  update.util.ts  user.ts  util.ts  version.util.ts  web.util.ts  website.util.ts
src/utils/: cache.util.tsx  data.util.ts  error.util.tsx  format.util.tsx  setup.util.tsx  url.util.tsx
src/views/: authorization.view.tsx  launcher.view.tsx  updater.view.tsx
(+35 files in other folders)
