[package]
name = "launcher"
version = "0.3.2"
description = "SerenityMC's Launcher"
authors = ["smokingplaya"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.89"
thiserror = "1.0.64"
log = "0.4.22"
env_logger = "0.11.5"
lazy_static = "1.5.0"
discord-rich-presence = "0.2.5"
dotenv = "0.15.0"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
hashbrown = "0.15.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
tokio = "1.41.0"
zip = "2.2.0"
# Project modules
mc_version_parser = {git = "https://github.com/smokingplaya/mc-version-parser"} # https://github.com/smokingplaya/mc-version-parser

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
