[package]
name = "launcher"
version = "0.3.9"
description = "Лаунчер riverfall.ru"
authors = ["smokingplaya"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.89"
thiserror = "1.0.64"
log = "0.4.22"
env_logger = "0.11.5"
tauri = { version = "2", features = ["native-tls", "tray-icon", "image-png"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2.0.0"
tauri-plugin-upload = "2"
tauri-plugin-drpc = "*"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
tokio = { version = "1.41.0", features = ["process"] }
zip = "2.2.0"
chrono = "0.4.39"
tauri-plugin-websocket = "2"
tauri-plugin-deep-link = "2"
sysinfo = "0.34.2"
mc-launcher = { version = "0.1.1", features = ["tokio"] }

[features]
custom-protocol = []

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
tauri-plugin-updater = "2"
